Update dependencies Move custom charging station scss in the component instead of generic table. Fix horizontal scrolling in mat-select

--- a/src/assets/scss/dashboard/_custom.scss
+++ b/src/assets/scss/dashboard/_custom.scss
@@ -4,3 +4,6 @@
 .mat-select-content {
   overflow-x: hidden;
 }
+.mat-option {
+  margin: 0;
+}
